--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@ figure {
 	padding: 0;
 }
 
+.site{
+  background: white;
+  max-width: 50em;
+  margin:0 auto;
+}
+
 .logo{
   font-size: 8em;
 }
@@ -71,6 +77,23 @@ margin-bottom: 3em;
 		padding-top: 0;
 	}
 }
+
+@media screen and (min-width: 600px) {
+
+  @supports (display:flex) {
+    .buckets ul{
+      display: flex;
+       justify-content: space-around;
+    }
+
+    .buckets li {
+  width: 48%;
+}
+  }
+
+}
+
+
 .splash-content{
   padding: 1.5em;
 }
@@ -114,8 +137,56 @@ margin-bottom: 3em;
   border-bottom: 1px solid white;
 }
 
-.site{
-  background: white;
-  max-width: 50em;
-  margin:0 auto;
+
+
+@supports(grid-area:auto){
+
+  @media screen and (min-width:50em){
+    .site{
+      max-width:65em;
+      display: grid;
+      grid-template-columns: 15em auto;
+
+    }
+
+
+    .masthead{
+      grid-column: 1/2;
+    }
+
+    .feature{
+      grid-column: 2/3;
+    }
+
+    .main-area{
+      grid-column: 2/3;
+    }
+
+    .sidebar{
+      grid-column: 2/3;
+    }
+
+    .colophon{
+      grid-column: 1/3;
+    }
+  }
+
+  @media screen and (min-width:65em){
+    .site{
+      grid-template-columns: 15em auto 15em;
+      justify-content:flex-end;
+
+    }
+
+    .sidebar{
+      grid-column: 3/4;
+      grid-row: 1/3;
+    }
+
+    .colophon{
+      grid-column: 1/4;
+    }
+  }
+
+
 }
